[package]
name = "memsize"
version = "0.1.4"
authors = ["Austin Keeley <austin.keeley@gmail.com>"]
edition = "2018"
description = "Memory unit sizes"
license = "MIT"
repository = "https://github.com/austinkeeley/memsize"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
